# libwebosi18n

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  oss-pkg-info.yaml
files/pkgconfig/: webosi18n.pc.in
headers/: webosi18n.h  webosi18n_C.h
headers/webosi18n/c/: IString_C.h  ResBundle_C.h  StringMap_C.h  WebOSLocale_C.h
headers/webosi18n/cxx/: IString.h  LocaleMatcher.h  ResBundle.h  WebOSLocale.h
res/: CMakeLists.txt  cppstrings.json  strings.json
res/resources/: strings.json
res/resources/en/CN/: strings.json
res/resources/uk/: strings.json
res/resources/zh/Hans/CN/: strings.json
src/: IString.cpp  IString_C.cpp  LocaleMatcher.cpp  ResBundle.cpp  ResBundle_C.cpp  StringMap_C.c  WebOSLocale.cpp  WebOSLocale_C.cpp
test/: TestAll.cpp  TestIString.cpp  TestIString.h  TestIString_C.c  TestIString_C.h  TestResBundle.cpp  TestResBundle.h  TestResBundle_C.c  TestResBundle_C.h  TestWebOSLocale.cpp  TestWebOSLocale.h  TestWebOSLocale_C.c  TestWebOSLocale_C.h
